commit before pushing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <h1>this is branch 1<h1>
+<p>this is new file from branch1 created before pushing this</p>
 <h1> Hello There </h1>
 <p>This will be changed</p>
 
